# asmtowasm

./: CMakeLists.txt  README.md  build.sh
examples/: advanced_arithmetic.asm  arithmetic.asm  conditional_jump.asm  fibonacci.asm  function_calls.asm  loop_example.asm  memory_advanced.asm  memory_operations.asm  simple_add.asm
include/: assembly_lifter.h  assembly_parser.h  llvm_generator.h  wasm_generator.h
src/: assembly_lifter.cpp  assembly_parser.cpp  llvm_generator.cpp  main.cpp  wasm_generator.cpp
